2003-06-01  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormTabViewInspector.gorm: Added new images to complete the
	tab style matrix buttons.
	* Images/tabtop_nib.tiff: New image
	* Images/tabbot_nib.tiff: New image
	* GNUmakefile: added images to resources

2003-05-31  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormScrollViewAttributesInspector.m: Added code to make changes
	to a scroll view.  The inspector is now functional.
	* GormScrollViewAttributesInspector.gorm: Added connections
	to window.
	* Palettes/3Containers/inspectors.m: Commented out dummy inspector
	for scroll views.

2003-05-29  Gregory John Casamento <greg_casamento@yahoo.com>
	
	* Resources/GormScrollViewAttributesInspector.gorm: new
	* GormScrollViewAttributesInspector.h: new
	* GormScrollViewAttributesInspector.m: new
	* Palettes/0Menu/GNUmakefile.preamble: new
	* Palettes/1Windows/GNUmakefile.preamble: new
	* Palettes/2Controls/GNUmakefile.preamble: new
	* Palettes/3Containers/GNUmakefile.preamble: new
	* Palettes/4Data/GNUmakefile.preamble: new
	* Gorm.m: Removed some constants and moved them to GormLib.
	* GormDocument.m: Removed some constants and moved them to
	GormLib.
	* Palettes/(all files): Cleaned up includes.  
	Got rid of "../.." style of includes by using GNUmakefile 
	settings.  Also corrected the category that some of the 
	classes are implementing to provide inspector names to Gorm.

2003-05-24  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Prevent subclassing of FirstResponder.

2003-05-24  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInspectorsManager.m: Made changes to revert inspector to
	"empty" when a document is closed.
	* GormClassManager.m: Prevent user from adding methods to 
	FirstResponder.  FirstResponder now automatically adds all 
	action methods to it's action.
	* GormDocument.m: Corrected a problem which was allowing the user to 
	instantiate FirstResponder.