@@ -1,5 +1,10 @@
 2003-06-01  Gregory John Casamento <greg_casamento@yahoo.com>
 
+	* GormPreferences.[hm]: Removed.  These were superceded
+	by the GormPrefController.
+
+2003-06-01  Gregory John Casamento <greg_casamento@yahoo.com>
+
 	* GormTabViewInspector.gorm: Added new images to complete the
 	tab style matrix buttons.
 	* Images/tabtop_nib.tiff: New image
